[gd_scene load_steps=10 format=3 uid="uid://dqecp8vm56tma"]

[ext_resource type="Script" path="res://code/Enemy.gd" id="1_8vhs5"]
[ext_resource type="PackedScene" uid="uid://bk6ikuoct1fpa" path="res://scenes/orc_mesh.tscn" id="2_j0goe"]
[ext_resource type="PackedScene" uid="uid://dyhk34bvr5waa" path="res://scenes/health_component.tscn" id="3_posg8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bkcvw"]
radius = 0.379515
height = 0.75903

[sub_resource type="BoxShape3D" id="BoxShape3D_nlixr"]
size = Vector3(0.185241, 0.222367, 0.378691)

[sub_resource type="Animation" id="Animation_rhr5b"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_uykxp"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_eleeo"]
resource_name = "run"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0672o"]
_data = {
"die": SubResource("Animation_rhr5b"),
"hit": SubResource("Animation_uykxp"),
"run": SubResource("Animation_eleeo")
}

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_8vhs5")

[node name="character-orc" parent="." instance=ExtResource("2_j0goe")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.382619, 0)
shape = SubResource("CapsuleShape3D_bkcvw")

[node name="TargetArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02485, -0.335697)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129284, -0.676116, -0.348606)
shape = SubResource("BoxShape3D_nlixr")

[node name="HealthComponent" parent="." instance=ExtResource("3_posg8")]
starting_health = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0672o")
}

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.0
path_height_offset = 0.15
avoidance_enabled = true
max_neighbors = 3

[connection signal="check_target_area" from="character-orc" to="." method="_on_characterorc_check_target_area"]
[connection signal="die" from="HealthComponent" to="." method="_on_health_component_die"]
[connection signal="take_damage" from="HealthComponent" to="." method="_on_health_component_take_damage"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
